<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chat Debug</string>
    <string name="client_name">Client Name</string>
    <string name="login">Log In</string>
    <string name="logout">Logout Client</string>
    <string name="logging_in">Logging in. Please wait...</string>
    <string name="invite_member">Invite Member</string>
    <string name="channel_invite">Channel Invite</string>
    <string name="channel_invite_message">You got a Channel Invite. Join it?</string>
    <string name="join">Join</string>
    <string name="decline">Decline</string>
    <string name="conversation">Conversation</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_channel">ChannelActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_update_friendly_name">Enter a friendly name</string>
    <string name="title_update_topic">Enter a topic</string>
    <string name="title_update_message">Update message</string>
    <string name="title_add_channel_name">Channel Friendly Name</string>
    <string name="title_invite_member">Invite member</string>
    <string name="title_add_member">Add member</string>
    <string name="title_search_channel_unique_name">Search Channel by Unique Name</string>
    <string name="title_remove_member">Remove member</string>
    <string name="type_message">Type message</string>
    <string name="OK">OK</string>
    <string name="Options">Options</string>
    <string name="Create_public_channel">Create public channel</string>
    <string name="Create_private_channel">Create private channel</string>
    <string name="RegId">Reg Id:</string>
    <string name="fcm">FCM</string>
    <string name="certPin">Pin certificate bundle</string>
    <string name="unregister_fcm">Unregister FCM Token</string>
    <string name="Create_public_channel_withOption">Create Pub Ch with Options</string>
    <string name="Create_private_channel_withOption">Create Pri Ch with Options</string>
    <string name="Search_channel_by_unique_name">Search channel by unique name</string>
    <string name="update_token">Update token</string>
    <string name="token_ttl">TTL (sec)</string>
    <string name="about">About</string>
    <string name="user_info_activity">User info activity</string>
    <string name="simulate_crash">Simulate crash</string>
    <string name="simulate_crash_in_java">in ChannelActivity.kt</string>
    <string name="simulate_crash_in_chat_client">in ChatClient.cpp</string>
    <string name="simulate_crash_in_tm_client">in TMClient.cpp</string>
    <string name="title_update_attributes">Update message attributes</string>
    <string name="userAvatar">User avatar</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="change_topic">Change Topic</string>
    <string name="add_member">Add</string>
    <string name="select_action">Select an option</string>
    <string name="title_add_channel">Create channel</string>
    <string name="title_find_channel">Find channel</string>
    <string name="search">Search</string>
    <string-array name="realms_list">
        <item>us1</item>
        <item>ie1</item>
    </string-array>
</resources>
