<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.twilio.chat.demo.activities.ChannelActivity">

    <item
        android:id="@+id/file"
        android:title="@string/Options">
        <!-- "file" submenu -->
        <menu>
            <item
                android:id="@+id/action_create_public"
                android:icon="@drawable/ic_action_content_add"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/Create_public_channel" />
            <item
                android:id="@+id/action_create"
                android:icon="@drawable/ic_action_content_add"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/Create_private_channel" />

            <item
                android:id="@+id/action_create_with_options"
                android:icon="@drawable/ic_action_content_add"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/Create_private_channel_withOption" />

            <item
                android:id="@+id/action_create_public_withoptions"
                android:icon="@drawable/ic_action_content_add"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/Create_public_channel_withOption" />

            <item
                android:id="@+id/action_search_by_unique_name"
                android:icon="@drawable/ic_action_content_add"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/Search_channel_by_unique_name" />
            <item
                android:id="@+id/action_update_token"
                android:icon="@drawable/ic_action_settings"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/update_token" />
            <item
                android:id="@+id/action_logout"
                android:icon="@drawable/ic_action_settings"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/logout" />

            <item
                android:id="@+id/action_unregistercm"
                android:icon="@drawable/ic_menu_stop"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/unregister_fcm" />
            <item
                android:id="@+id/action_user_info"
                android:icon="@drawable/ic_menu_stop"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/user_info_activity" />
            <item
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/simulate_crash">
                <menu>
                    <item
                        android:id="@+id/action_crash_in_java"
                        android:orderInCategory="100"
                        android:showAsAction="never"
                        android:title="@string/simulate_crash_in_java" />
                    <item
                        android:id="@+id/action_crash_in_chat_client"
                        android:orderInCategory="100"
                        android:showAsAction="never"
                        android:title="@string/simulate_crash_in_chat_client" />
                    <item
                        android:id="@+id/action_crash_in_tm_client"
                        android:orderInCategory="100"
                        android:showAsAction="never"
                        android:title="@string/simulate_crash_in_tm_client" />
                </menu>
            </item>
        </menu>
    </item>
</menu>
